--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
             "email": "scgoms@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+	"extra":{
+        "laravel":{
+            "providers": [
+                "GomsTech\\Settings\\SettingsServiceProvider\\"
+            ]
+        }
+    }
 }
